--- a/PayStubCreator/MainWindow.xaml
+++ b/PayStubCreator/MainWindow.xaml
@@ -19,8 +19,11 @@
         </Grid.RowDefinitions>
         <Label x:Name="fileAddLbl" Content="Add file" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <Label x:Name="folderAddLbl" Content="Add folder (Batch mode)" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="2"/>
-        <Button x:Name="fileAddButton" Content="Browse..." Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Click="FileAddButton_Click"/>
-        <Button x:Name="folderAddButton" Content="Browse..." Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Click="FolderAddButton_Click"/>
+        <Button x:Name="fileAddButton" Content="Browse..." Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100" Click="FileAddButton_Click"/>
+        <Button x:Name="folderAddButton" Content="Browse..." Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100" Click="FolderAddButton_Click"/>
+        <Label x:Name="addLogoLbl" Content="Add company logo file (optional)" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="1"/>
+        <Button x:Name="addLogoBtn" Content="Browse..." VerticalAlignment="Center" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Center" MinWidth="100" Click="AddLogoBtn_Click"/>
+        <TextBlock x:Name="logoLBL" Text="" VerticalAlignment="Center"  Grid.Column="2" Grid.Row="2" HorizontalAlignment="Center" Margin="0,50,0,0" MinWidth="100" Width="Auto" TextWrapping="WrapWithOverflow"/>
 
     </Grid>
 </Window>
